syntax = "proto3";

option go_package = "minmax.uk/autopal/proto";

package autopal;

service MainService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message GetUserInfoRequest {
  string username = 1;
}

message GetUserInfoResponse {
  UserInfo user_info = 1;
}

message UserInfo {
  string username = 1;
}
